--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,20 @@
 .App {
-  /* display: grid;
+  position: absolute;
   width: 100%;
   height: 100vh;
   background-color: blue;
-  grid-template-rows: ; */
+  overflow: hidden;
+}
+.page {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: white;
 }
 header {
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 100%;
   height: 68px;
@@ -33,10 +41,9 @@ header {
 
 .jumbotron {
   display: grid;
-  width: calc(100%-24px);
   height: 100vh;
   gap: 20px;
-  margin: 24px 20px;
+  margin: 88px 16px 0;
   grid-template-rows: 200px 156px;
   grid-template-areas:
     'main main'
@@ -58,7 +65,7 @@ header {
 footer {
   color: white;
   width: 100%;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   background-color: #2699fb;
   height: 56px;
