--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,16 @@
   position: absolute;
   width: 100%;
   height: 100vh;
-  background-color: blue;
+  background-color: rgb(160, 160, 255);
   overflow: hidden;
+}
+.App-overlay {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  background-color: black;
+  opacity: 0;
+  /* z-index: 100; */
 }
 .page {
   position: absolute;
