--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@ header {
   flex-basis: 52px;
   padding: 36px 0 0 16px;
 }
+button {
+  border: 0;
+  background-color: white;
+}
 .brand {
   flex-grow: 2;
   padding: 36px 0 0 0;
