--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   position: absolute;
   width: 100%;
   height: 100vh;
-  background-color: rgb(160, 160, 255);
   overflow: hidden;
 }
 .App-overlay {
@@ -18,7 +17,7 @@
   width: 100%;
   height: 100vh;
   top: 0;
-  left: 0;
+  left: 80%;
   background-color: white;
 }
 header {
@@ -53,13 +52,16 @@ button {
 
 .jumbotron {
   display: grid;
-  height: 100vh;
   gap: 20px;
-  margin: 88px 16px 0;
+  margin: 88px 16px 20px;
   grid-template-rows: 200px 156px;
   grid-template-areas:
     'main main'
     'second third';
+}
+.hero-caro {
+  margin: 0px 16px 20px;
+  text-align: center;
 }
 
 .main_img {
