--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   width: 100%;
   height: 100vh;
   top: 0;
-  left: 80%;
+  left: 0;
   background-color: white;
 }
 header {
@@ -38,6 +38,8 @@ header {
 button {
   border: 0;
   background-color: white;
+  margin: 0;
+  padding: 0;
 }
 .brand {
   flex-grow: 2;
