--- a/src/Menu.css
+++ b/src/Menu.css
@@ -33,16 +33,21 @@
   border-bottom: 2px solid #2699fb;
   border-bottom-color: rgba(38, 153, 251, 0.2);
 }
+.menu-nav-items a {
+  text-decoration: none;
+}
 .menu-nav-item-icon {
   width: 16px;
   height: 16px;
+  color: white;
 }
-.menu-nav-items span {
+.menu-nav-item-text {
   margin-left: 25px;
   text-transform: uppercase;
   font-family: Arial;
   font-weight: bold;
   font-size: 10px;
+  color: white;
 }
 .menu-footer {
   display: flex;
