--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,9 @@
   width: 100%;
   height: 100vh;
   position: absolute;
-  background-color: black;
+  background-color: white;
   opacity: 0;
-  /* z-index: 100; */
+  z-index: 100;
 }
 .page {
   position: absolute;
@@ -29,6 +29,7 @@ header {
   display: flex;
   color: #2699fb;
   font-family: Arial, Helvetica, sans-serif;
+  z-index: 200;
 }
 
 .btn-menu {
