--- a/src/Home.css
+++ b/src/Home.css
@@ -1,4 +1,4 @@
-.jumbotron {
+.body-home .jumbotron {
   display: grid;
   gap: 20px;
   margin: 88px 16px 20px;
@@ -7,20 +7,20 @@
     'main main'
     'second third';
 }
-.hero-caro {
+.body-home .hero-caro {
   margin: 0px 16px 20px;
   text-align: center;
 }
 
-.main_img {
+.body-home .main_img {
   background-color: #bce0fd;
   grid-area: main;
 }
-.second_img {
+.body-home .second_img {
   background-color: #bce0fd;
   grid-area: second;
 }
-.third_img {
+.body-home .third_img {
   background-color: #bce0fd;
   grid-area: third;
 }
