--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -1,4 +1,4 @@
-.jumbotron {
+.body-portfolio .jumbotron {
   display: grid;
   gap: 8px;
   margin: 88px 16px 20px;
@@ -10,51 +10,51 @@
     'project6 project7 project5'
     'project8 project9 project10';
 }
-.jumbotron div {
+.body-portfolio .jumbotron div {
   background-color: #bce0fd;
 }
-.hero-caro {
+.body-portfolio .hero-caro {
   margin: 0px 16px 20px;
   text-align: center;
 }
 
-.project1 {
+.body-portfolio .project1 {
   background-color: #bce0fd;
   grid-area: project1;
 }
-.project2 {
+.body-portfolio .project2 {
   background-color: #bce0fd;
   grid-area: project2;
 }
-.project3 {
+.body-portfolio .project3 {
   background-color: #bce0fd;
   grid-area: project3;
 }
-.project4 {
+.body-portfolio .project4 {
   background-color: #bce0fd;
   grid-area: project4;
 }
-.project5 {
+.body-portfolio .project5 {
   background-color: #bce0fd;
   grid-area: project5;
 }
-.project6 {
+.body-portfolio .project6 {
   background-color: #bce0fd;
   grid-area: project6;
 }
-.project7 {
+.body-portfolio .project7 {
   background-color: #bce0fd;
   grid-area: project7;
 }
-.project8 {
+.body-portfolio .project8 {
   background-color: #bce0fd;
   grid-area: project8;
 }
-.project9 {
+.body-portfolio .project9 {
   background-color: #bce0fd;
   grid-area: project9;
 }
-.project10 {
+.body-portfolio .project10 {
   background-color: #bce0fd;
   grid-area: project10;
 }
