--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -1,7 +1,38 @@
+.body-portfolio .filter {
+  display: grid;
+  margin: 88px 16px 16px;
+  grid-template-rows: 48px 88px;
+  grid-template-columns: 1fr;
+}
+.body-portfolio .search-input {
+  width: 100%;
+  height: 48px;
+  border: 1px solid #bce0fd;
+  border-radius: 10px;
+  box-sizing: border-box;
+}
+.body-portfolio .filters {
+  display: grid;
+  gap: 15px;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
+  align-items: center;
+  margin: 24px 20px;
+}
+.body-portfolio .filter-icon {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 56px;
+  height: 56px;
+  border-radius: 28px;
+  background-color: #f1f9ff;
+}
+
 .body-portfolio .jumbotron {
   display: grid;
   gap: 8px;
-  margin: 88px 16px 20px;
+  margin: 16px 16px 20px;
   grid-template-rows: repeat(4, 109px);
   grid-template-columns: repeat(3, 1fr);
   grid-template-areas:
