--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -4,12 +4,27 @@
   grid-template-rows: 48px 88px;
   grid-template-columns: 1fr;
 }
+.search-input-icon {
+  position: absolute;
+  padding: 16px;
+  color: #2699fb;
+}
+.search-input-icon-right {
+  position: absolute;
+  padding: 16px;
+  right: 16px;
+  color: #2699fb;
+}
 .body-portfolio .search-input {
   width: 100%;
   height: 48px;
   border: 1px solid #bce0fd;
   border-radius: 10px;
   box-sizing: border-box;
+  padding-left: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  color: #2699fb;
 }
 .body-portfolio .filters {
   display: grid;
