--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,77 @@
+/* Global */
+.btn-cm {
+  color: white;
+  background-color: #7fc4fd;
+  border-radius: 20px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.btn--inverse {
+  color: #2699fb;
+  padding: 10px 12px;
+  border: solid 1px #bce0fd;
+  border-radius: 5px;
+  margin: 0 10px 10px 0;
+}
+.body--lg {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
+.body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+}
+.body--sm {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
+.btn--font {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 10px;
+}
+.btn--primary {
+  border-radius: 4px;
+  padding: 15px 24px;
+  background-color: #2699fb;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 10px;
+}
+.cont {
+  /* background-color: #bce0fd; */
+}
+.content__cont {
+  position: absolute;
+  color: #3f9afa;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 34px;
+}
+.content__title {
+  font-size: 40px;
+  margin-bottom: 16px;
+}
+.content__copy {
+  font-size: 14px;
+  line-height: 1.6;
+  text-align: center;
+}
+
 .App {
   position: absolute;
   width: 100%;
   height: 100vh;
   overflow: hidden;
   background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
 }
 .App-overlay {
   width: 100%;
