--- a/src/Project.css
+++ b/src/Project.css
@@ -1,13 +1,50 @@
 .body-Project {
+  color: #3f9afa;
+  overflow: scroll;
+  position: absolute;
+  height: 100%;
+  margin-top: 88px;
 }
 .body-Project .jumbotron {
   display: grid;
   gap: 8px;
-  margin: 88px 16px 16px;
+  margin: 16px 16px 16px;
   grid-template-rows: 208px 109px 164px 109px 1fr;
 }
 .body-Project .hero {
   background-color: #bce0fd;
+}
+.content {
+  position: relative;
+  width: 100%;
+  height: 208px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content__cont {
+  position: absolute;
+  color: #3f9afa;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 34px;
+}
+.content__title {
+  font-size: 40px;
+  margin-bottom: 16px;
+}
+.content__copy {
+  font-size: 14px;
+  line-height: 1.6;
+  text-align: center;
+}
+
+.button--expand {
+  position: absolute;
+  right: 16px;
+  margin: 16px;
 }
 
 .body-Project .dash {
@@ -17,10 +54,24 @@
   grid-template-rows: 109px;
 }
 
-.body-Project .dash div {
+.dash__cont {
   background-color: #f1f9ff;
+  padding: 34px 24px;
+  text-transform: uppercase;
+  text-align: left;
 }
-
+.dash__cont .body--lg {
+  margin-bottom: 8px;
+}
+.cont {
+  padding: 22px 24px;
+}
+.cont__title {
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 24px;
+}
 .body-Project .skills {
   background-color: #f1f9ff;
 }
